--- a/css/chanell.css
+++ b/css/chanell.css
@@ -34,9 +34,6 @@ a:link {
 a:visited {
 	color: black;
 	text-decoration: none;
-}
-a:hover{
-	color: khaki;
 } 
 label{
 	color:white;
@@ -44,7 +41,7 @@ label{
 	height: 70px;
 }
 .top{
-	margin-top: 210px;
+	margin-top: 270px;
 }
 ul{
 	margin: auto;
@@ -59,7 +56,7 @@ html{
 	background-color: khaki;
 }
 body{
-	padding:5% ;
+	padding:0px 5% 10px 5%;
 }
 /*header*/
 	header{
@@ -109,9 +106,6 @@ body{
 		display: block;
 	}
 	/*main*/
-		main{
-			margin-top: 95px;
-		}
 		.main-com{
 			max-width: 60%;
 		}
@@ -160,9 +154,32 @@ body{
 			max-width: 60%;
 			float: none;
 		}
+		.add-comint{
+			position: relative;
+			min-height: 130px;
+			text-align: center;
+			background-color: khaki;
+			padding: 10px;
+			border-radius: 15px;
+		}
+		.inputs{
+			width: 40%;
+		}
 		input{
 			margin: auto auto 5px auto;
-			width: 50%;
+			width: 100%;
+		}
+		textarea{
+			position: relative;
+			max-width: 60%;
+			min-width: 50%;
+			min-height: 120px;
+			word-wrap: break-word;
+		}
+		.send-btn{
+			border-radius: 50px;
+			padding:5px 20px;
+			background-color: lightgray;
 		}
 		.switch{
 			display: none;
