--- a/css/chanell.css
+++ b/css/chanell.css
@@ -25,7 +25,7 @@
 	float: left;
 }
 .show{
-	display: none;
+	display: none !important;
 }
 a:link {
 	color: black;
@@ -71,6 +71,7 @@ body{
 		background-position: bottom;
 	}
 	.menu{
+		min-height: 42px;
 		text-align: center;
 		position: relative;
 		background-color:#90450f;
@@ -157,6 +158,7 @@ body{
 			position: relative;
 			overflow: hidden;
 			text-align: center;
+			margin-top: 5px;
 			background-color: khaki;
 			padding: 10px;
 			border-radius: 15px;
@@ -192,13 +194,51 @@ body{
 		.switch-bar{
 			display: none;
 		}
+		.mobile-menu{
+			display: none;
+		}
+		.lines{
+			display: none;
+		}
 		@media all and (max-width:860px){
 			.main-menu{
 				display: none;
 			}
+			.mobile-menu{
+				padding: 10px;
+				display:block;
+				position: fixed ;
+				background-color: khaki ;
+				width: 70%;
+				height: 100%;
+				border-radius: 15px;
+			}
+			.ka-mobile-menu{
+				padding: 10px;
+				display:block;
+				background-color:#90450f;
+				border-radius: 15px;
+			}
+			.menu-list{
+				padding: 15px 0px;
+			}
+			.go-to{
+				font-size: 30px;
+				padding: 5px 20px;
+			}
 			.lines{
-				float: right;
-				background-image: url(/css/img/lines.png) ;
+				display:block;
+				color: honeydew;
+				background-repeat: no-repeat;
+				background-size: 40px 40px;
+				height: 40px;
+				width: 40px;
+				padding:auto;
+				background-image: url(/css/img/open-menu.svg);
+			}
+			.x{
+				display:block;
+				background-image: url(/css/img/x.png) ;
 				background-repeat: no-repeat;
 				background-size: 40px 40px;
 				height: 40px;
@@ -219,19 +259,22 @@ body{
 				width: 100%;
 			}
 			.comments{
-				float: left;
+				float: right;
 			}
 			.switch-bar{
 				text-align: center;
 				display: block;
+				margin-top: 10px;
+				padding: 2px 5px;
+				color: khaki;
 				background-color:#90450f;
-				height:30px ;
-				width: 100%;
+				max-width: 48%;
+				min-width: 45%;
 				border-radius: 15px;
 			}
 			.phone-list{
 				margin:30px auto 10px auto;
-				float:right;
+				float:left;
 				background-color:white;
 				border-radius: 15px;
 				width: 80%;
