--- a/css/page.css
+++ b/css/page.css
@@ -37,7 +37,7 @@ a:hover{
 	color: khaki;
 } 
 .show{
-	display: none;
+	display: none !important;
 }
 .right{
 	float: right;
@@ -80,22 +80,26 @@ li{
 		background-position: bottom;
 	}
 	.menu{
+		min-height: 42px;
 		text-align: center;
 		position: relative;
 		background-color:#90450f;
+		border-radius: 15px 15px 0 0;
 		text-transform: uppercase;
+		padding: 5px;
 	}
 	.go-to{
-		border-right: 1px dotted khaki;
-		border-left: 1px dotted khaki;
-		padding:10px 30px;
+		border: 1px solid khaki;
+		border-radius: 50px;
+		padding:7px 10px;
+		margin:10px 5px;
 	}
 	.go-to:hover{
 		color: khaki;
 		border:1px solid black ;
 	}
 	.padding{
-		padding: 10px  0px 10px 0px;
+		padding: 10px  0px;
 	}
 	label{
 		color:white;
@@ -214,6 +218,9 @@ li{
 				width: 70px;
 				margin-top: 80px;
 			}
+			.mobile-menu{
+				display:none;
+			}
 	/*footer*/
 	footer{
 		height: 100px;
@@ -221,7 +228,51 @@ li{
 		background-color: gray;
 		color: white;
 	}
-@media all and (max-width:850px){
+@media all and (max-width:950px){
+	.main-menu{
+		display: none;
+	}
+	.mobile-menu{
+		padding: 10px;
+		display:block;
+		position: fixed ;
+		background-color: khaki ;
+		width: 70%;
+		height: 100%;
+		border-radius: 15px;
+	}
+	.ka-mobile-menu{
+		padding: 10px;
+		display:block;
+		background-color:#90450f;
+		border-radius: 15px;
+	}
+	.lines{
+		display:inline-block;
+		color: honeydew;
+		background-repeat: no-repeat;
+		background-size: 40px 40px;
+		height: 40px;
+		width: 40px;
+		padding:auto;
+		background-image: url(/css/img/open-menu.svg);
+	}
+	.x{
+		display:inline-block;
+		background-image: url(/css/img/x.png) ;
+		background-repeat: no-repeat;
+		background-size: 40px 40px;
+		height: 40px;
+		width: 40px;
+		border-radius: 50px;
+	}
+	.menu-list{
+		padding: 15px 0px;
+	}
+	.go-to{
+		font-size: 30px;
+		padding: 5px 20px;
+	}
 	.left-right{
 		display: none;
 	}
