--- a/css/page.css
+++ b/css/page.css
@@ -144,6 +144,9 @@ h2{
 		width: 500px;
 		height: 100px;
 	}
+	.searching{
+		background-color: cornsilk;
+	}
 	.search{
 		background-image: url(/css/img/search.png) ;
 		background-position:center bottom;
